--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,6 +229,13 @@ omit = [
     "*/tests/*",
     "src/http_dynamix/_version.py",
     "src/http_dynamix/__main__.py",
+    "src/http_dynamix/clients/*",
+    "src/http_dynamix/httpx_logger.py",
+    "src/http_dynamix/log.py",
+    "src/http_dynamix/core/segment_format.py",
+    "src/http_dynamix/protocols.py",
+    "src/http_dynamix/factory.py",
+    "src/http_dynamix/auth.py",
 ]
 disable_warnings = ["no-data-collected"]
 
