--- a/compose.yaml
+++ b/compose.yaml
@@ -6,22 +6,9 @@ services:
       dockerfile: Dockerfile
     networks:
       - http-dynamix-tests
-
-    # Common Test Commands:
-    # Here we have some command that can be used as an examples.
-    # Uncomment the command that you want to use and comment the rest of the commands.
-    ##############################################################
-    ##### NOTE: Just one command should be uncommented at a time #
-    ##############################################################
-    #
-    #######################################################
-    ##### NOTE: Examples are based on httpbin.org service #
-    #######################################################
-
-    ###########################################################################
-    # Run all tests                                                           #
-    ###########################################################################
-    # command: ["run", "--checks", "all", "--workers", "auto"]
-
+    # To run all tests (default):
+    command: ["pytest", "-n", "auto", "tests"]
+    # To run only integration tests, override with:
+    # command: ["pytest", "-n", "auto", "tests/test_clients_integration.py"]
 networks:
- http-dynamix-tests:
+  http-dynamix-tests:
