--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,22 @@ jobs:
       - name: Run pre-release checks
         shell: bash -el {0}
         run: hatch run pre-release:all
+
+  build-pypi:
+    runs-on: ubuntu-latest
+    needs: pre-release
+    steps:
+      - name: Checkout code with tags
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install build tool
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install hatch
+      - name: Build package
+        run: hatch build
